# aurum-miniapp-prod

./: .env.production  .eslintrc.js  .gitignore  ANALYZE_AND_FIX_NGINX_PROXY.md  ANALYZE_AND_FIX_NGINX_PROXY_EXPANDED.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  COMPLETE_DEPLOYMENT_SOLUTION.md  DEPLOYMENT.md  DEPLOYMENT_FIX_README.md  DOCKER_COMPOSE_BUG_FIX_PLAN.md  DOCKER_COMPOSE_REFACTORING_SUMMARY.md  DOCKER_COMPOSE_USAGE_GUIDE.md  FINAL_DEPLOYMENT_SUMMARY.md  FIXES-APPLIED.md  IMPLEMENTATION_PLAN.md  LICENSE  MAKEFILE-MIGRATION.md  ML_SERVICE_INTEGRATION_GUIDE.md  Makefile  NEXT_ACTIONS_NGINX_FIX.md  PRODUCTION-DEPLOYMENT.md  PRODUCTION-READY-SUMMARY.md  README.md  RUST_SERVICES_FIX.md  SERVER_DEPLOYMENT_FIX.md  TROUBLESHOOTING.md  deploy-production.sh  docker-compose-absolute.yml  docker-compose-fixed.yml  docker-compose.prod.yml  docker-compose.yml  fix-deployment.sh  package-lock.json  package.json  setup-production-env.sh  test-deployment.sh  test-docker-compose.sh  test-path.sh  (+3 more)
.crush/: crush.db-shm  crush.db-wal
.github/workflows/: ci.yml
api-gateway/: Dockerfile  go.mod  go.sum  main.go
apps/landing-page/: .env.example  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/ml-api/: .env.production.template  .gitignore  CHANGELOG.md  CONSOLIDATION_PLAN.md  DEPLOYMENT.md  Dockerfile  README.md  TESTING_PLAN.md  jest.config.js  jest.setup.ts  package.json  package.standalone.json  tsconfig.json
apps/web/: .dockerignore  .env.example  CHANGELOG.md  DEV_SETUP.md  DOCKER_COMPOSE_FIX_PLAN.md  Dockerfile  Dockerfile.attractiveness  ENVIRONMENT.md  ML_MODELS_README.md  MODELS_SETUP.md  OPTIMIZATION_PLAN.md  README.md  README_OPTIMIZED.md  RUST_DEPLOYMENT_PLAN.md  RUST_FACE_DETECTION_PLAN.md  RUST_FACE_EMBEDDING_PLAN.md  RUST_INTEGRATION_SUMMARY.md  WORLD_ID_SETUP.md  docker-compose.yml  ec2-deploy.txt  fly.attractiveness.toml  jest.config.js  jest.setup.js  justfile  package.json  package.standalone.json  run.sh  tailwind.config.js  tsconfig.json  tsconfig.standalone.json
aurum-circle-miniapp/: .env.example  .eslintrc.json  .gitignore  DOCKER_INFRASTRUCTURE.md  DOCKER_NPM_FIX_PLAN.md  Dockerfile  Dockerfile.dev  Dockerfile.scoring-service  Dockerfile.scoring-service.dev  IMPLEMENTATION_ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  next.config.js  next.config.ts.backup  package-lock.json  package.json  run.bat  tsconfig.json
aurum-circle-miniapp/.crush/: crush.db-shm  crush.db-wal
aurum-circle-miniapp/ml-face-score-api/: .env.example  .gitignore  DEPLOYMENT.md  README.md  package.json  pm2.config.js
aurum-circle-miniapp/ml-face-score-api-nodejs/: tsconfig.json
aurum-circle-miniapp/public/: manifest.json  sw.js
aurum-circle-miniapp/qdrant_storage/: raft_state.json
aurum-circle-miniapp/scripts/: build-docker.sh  deploy-attractiveness.sh  download-models.sh  install-deps.sh  network-check.sh  optimize-models.sh  prepare-deployment.sh
aurum-ml-services/: Cargo.toml  README.md  docker-compose.dev.yml
aurum-ml-services/build-monitor/: Cargo.toml  Dockerfile  README.md  config.toml
aurum-ml-services/build-monitor/src/: config.rs  docker.rs  git.rs  lib.rs  main.rs  models.rs  monitor.rs  notifications.rs  rollback.rs  web.rs
aurum-ml-services/face-detection/: Cargo.toml  Dockerfile  Dockerfile.dev
aurum-ml-services/face-detection/src/: api.rs  lib.rs  main.rs  models.rs  processors.rs  utils.rs
aurum-ml-services/face-detection/tests/: api.rs
aurum-ml-services/face-embedding/: Cargo.toml  Dockerfile  Dockerfile.dev
aurum-ml-services/face-embedding/src/: api.rs  lib.rs  main.rs
aurum-ml-services/face-embedding/tests/: api.rs
aurum-ml-services/self-healing-system/: Cargo.toml  Dockerfile  INTEGRATION_GUIDE.md  README.md  docker-compose.yml
aurum-ml-services/self-healing-system/migrations/: 001_initial_schema.sql  001_initial_schema_fixed.sql
aurum-ml-services/self-healing-system/monitoring/: alert_rules.yml  prometheus.yml
aurum-ml-services/self-healing-system/monitoring/grafana/datasources/: prometheus.yml
aurum-ml-services/self-healing-system/scripts/: deploy.sh
aurum-ml-services/self-healing-system/src/: config.rs  database.rs  git_operations.rs  llm_integration.rs  main.rs  monitoring.rs  patch_generator.rs  patch_validator.rs  static_analysis.rs
aurum-ml-services/self-healing-system/tests/: integration_tests.rs  llm_integration_tests.rs  patch_generation_tests.rs  patch_validation_tests.rs  static_analysis_tests.rs
aurum-ml-services/test-case-generator/: Cargo.toml
aurum-ml-services/test-case-generator/src/: config.rs  main.rs  models.rs
deploy/: docker-compose.yml
deploy/nginx/: README.md  (+1 more)
miniapp/: ARCHITECTURE.md  CODEBASE_SUMMARY.md  DEPLOYMENT_ARCHITECTURE.md  DESIGN_SPECIFICATION.md  DOCKER_COMPOSE_FIX_PLAN.md  IMPLEMENTATION_STEPS.md  ML_API_DIRECTORY_STRUCTURE.md  PRODUCTION_DEPLOYMENT_PLAN.md  REQUIREMENTS.md  TASK_CONTINUATION.md  UPGRADE_SUMMARY.md  docker-compose.yml  docker-compose.yml.backup  nginx.conf  requirement.md  requirement2.md
nginx/: Dockerfile  nginx.conf
scripts/: analyze-codebase.js  backup.js  validate-cleanup.js
(+515 files in other folders)
