[package]
name = "face-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
image = "0.24"
ort = "2.0.0-rc.10"
thiserror = "1.0"
base64 = "0.21"
common = { path = "../common" }
