[package]
name = "self-healing-system"
version = "1.0.0"
edition = "2021"
authors = ["Aurum Circle Team"]
description = "Self-healing CI/CD pipeline with LLM-assisted code patching"
license = "MIT"

[[bin]]
name = "self-healing-daemon"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Static analysis
syn = { version = "2.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"

# LLM integration
reqwest = { version = "0.11", features = ["json", "stream"] }
async-openai = "0.20"
anthropic = "0.1"
tokio-stream = "0.1"

# Code transformation
prettyplease = "0.2"
rustfmt-wrapper = "0.2"

# File operations
walkdir = "2.4"
tempfile = "3.8"
glob = "0.3"

# Git operations
git2 = "0.18"
git2-curl = "0.19"

# Docker integration
bollard = "0.15"

# Configuration
config = "0.13"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Security
sha2 = "0.10"
hex = "0.4"

# Testing
temp-testdir = "0.2"
assert_cmd = "2.0"
predicates = "3.0"

# Monitoring
prometheus = "0.13"
warp = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
once_cell = "1.19"
dashmap = "5.5"