[package]
name = "test-case-generator"
version = "1.0.0"
edition = "2021"
authors = ["Aurum Circle Team"]
description = "Minimal reproducible test case generator for self-healing CI/CD pipeline"
license = "MIT"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
regex = "1.0"
glob = "0.3"
walkdir = "2.0"
tempfile = "3.0"
git2 = "0.18"
docker-api = "0.14"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
blake3 = "1.0"
flate2 = "1.0"
tar = "0.4"
async-trait = "0.1"
futures = "0.3"
prometheus = "0.13"
config = "0.13"
toml = "0.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"